// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<DocumentFragment>
  <label
    class="uui-switch container root uui-size-18 uui-color-primary -clickable"
  >
    <div
      class="uui-switch-body"
    >
      <input
        aria-checked="false"
        role="switch"
        type="checkbox"
      />
      <div
        class="uui-switch-toggler"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switch should be rendered correctly with maximum props 1`] = `
<DocumentFragment>
  <label
    class="uui-switch container root uui-size-18 uui-color-primary uui-disabled uui-readonly"
  >
    <div
      class="uui-switch-body"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-readonly="true"
        disabled=""
        readonly=""
        required=""
        role="switch"
        type="checkbox"
      />
      <div
        class="uui-switch-toggler"
      />
    </div>
    <div
      class="uui-input-label"
    >
      Open
    </div>
  </label>
</DocumentFragment>
`;
